Add support for affinity mode in HandoffHttpServer and related tests: requires https://github.com/franz1981/loom/tree/fibers_affinity